# audio_notes_saver

./: Dockerfile  DockerfileTest  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
src/: config.py  database.py  main.py
src/api/: __init__.py  dependencies.py  notes.py
src/core/: security.py
src/models/: notes.py
src/schemas/: notes.py
