[project]
name = "audio-notes-saver"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "uvicorn[standard]",
    "fastapi",
    "pydantic",
    "pydantic-settings",
    "supertokens-python",
    "sqlalchemy",
    "asyncpg",
    "python-multipart"
]